# Tetris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Tetris/: Assets.cpp  Main.cpp  Settings.h
Tetris/Game/: App.cpp  App.h  Game.cpp  Game.h  Tetris.cpp  Tetris.h
Tetris/Renderer/: Renderer.cpp  Renderer.h
Tetris/assets/: icons.rc
